--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,68 +1,82 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Elms Sans", sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
+header{
+    height: 150px;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    display: flex;
 }
+
+.logo-section{
+    width: 75%;
+}
+.happy-worker-section{
+    width: 25%;
+}
+
+.logo-image{
+    height: 150px;
+    margin-left: 25px;
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+    font-size: 20px;
+    /* margin: 0;
+    padding: 0;
+    overflow: hidden;*/
+    background-color: #4646CC;
+    height: 60px;
+} 
+
+li {
+    padding-right: 20px;
+    padding-left: 20px;
+    font-size: 30px;
+    border-left:1px solid white;
+    text-align: center;
+    line-height: 60px;
+    
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.main-section{
+    width: 70%;
+    height: auto;
+    /* background-color: aquamarine;    */
+}
+
+.main-section h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.main-section img{
+    width: 40%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+footer{
+    height: auto;
+    text-align: right;
+}
+
+
+/* #4646CC */
