--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -18,6 +17,12 @@ header{
 .happy-worker-section{
     width: 25%;
 }
+
+/* .happy-worker-section p{
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+} */
 
 .niewidzialny{
     display: none;
@@ -55,14 +60,18 @@ a{
 }
 
 main{
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: center; */
+    width: 70%;
+    height: auto;
+    margin: auto;
 }
 
 .main-section{
-    width: 70%;
+    /* width: 70%;
     height: auto;
+    margin: auto; */
     /* background-color: aquamarine;    */
 }
 
@@ -77,9 +86,28 @@ main{
     margin-bottom: 20px;
 }
 
+table{
+    width: 80%;
+    border-collapse: collapse;
+    margin: auto;
+    margin-bottom: 20px;
+}
+th, td{
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+}
+
 footer{
     height: auto;
     text-align: right;
+    padding-right: 20px;
+    font-weight: bold;
+    background-color: #4646CC;
+    color: white;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-top: 20px;
 }
 
 
