--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -18,12 +18,6 @@ header{
     width: 25%;
 }
 
-/* .happy-worker-section p{
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-} */
-
 .niewidzialny{
     display: none;
 }
@@ -37,11 +31,9 @@ ul{
     list-style-type: none;
     display: flex;
     font-size: 20px;
-    /* margin: 0;
-    padding: 0;
-    overflow: hidden;*/
     background-color: #4646CC;
     height: 60px;
+    cursor: pointer;
 } 
 
 li {
@@ -60,9 +52,6 @@ a{
 }
 
 main{
-    /* display: flex;
-    flex-direction: row;
-    justify-content: center; */
     width: 70%;
     height: auto;
     margin: auto;
@@ -73,6 +62,7 @@ main{
     height: auto;
     margin: auto; */
     /* background-color: aquamarine;    */
+    
 }
 
 .main-section h1{
@@ -87,7 +77,6 @@ main{
 }
 
 .button-section{
-    /* margin: auto; */
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -114,11 +103,72 @@ table{
     border-collapse: collapse;
     margin: auto;
     margin-bottom: 20px;
+    margin-top: 40px;
 }
 th, td{
     border: 1px solid black;
     padding: 10px;
     text-align: center;
+}
+
+.game{
+    padding: 20px;
+    margin:20px;
+    height: auto;
+}
+.game-board{
+    height: auto;
+    width: auto;
+    border: 2px solid black;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.board-row{
+    display: flex;
+}
+
+.winner{
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.board-row button{
+    height: 120px;
+}
+
+.square{
+    width: 120px;
+    height: 120px;
+    background-color: #ffffff;
+    border: 0.5px solid #000000;
+    font-size: 48px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.expenses-table table{
+    margin-top: 20px;
+    width: 80%;
+    border-collapse: collapse;
+    margin: auto;
+    margin-bottom: 20px;
+}
+.expenses-table th, .expenses-table td{
+    border: none;
+    padding: 10px;
+    text-align: center;
+}
+
+.expenses-table th{
+    background-color: #4646CC;
+    color: white;
+}
+
+.expenses-table tr:nth-child(even){
+    background-color: #bbbbfa70;
 }
 
 footer{
