--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -28,7 +28,7 @@ header{
     margin-left: 25px;
 }
 
-ul{
+.nav-links{
     list-style-type: none;
     display: flex;
     font-size: 20px;
@@ -36,7 +36,7 @@ ul{
     height: 60px;
 } 
 
-li {
+.links {
     padding-right: 20px;
     padding-left: 20px;
     font-size: 30px;
@@ -130,4 +130,65 @@ h1 {
     margin-right: 5px;
     padding: 5px 10px;
     cursor: pointer;
+}
+
+/* css do quiz.tsx */
+
+h2{
+    text-align: center;
+}
+
+.quiz-container {
+  max-width: 600px;
+  margin: 100px auto;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  height: 400px;
+}
+
+.options-list {
+  list-style-type: none; 
+  padding: 0;
+  margin-bottom: 20px;
+  text-align: center; 
+}
+
+.option {
+  margin-bottom: 10px;
+}
+
+.option label {
+  display: inline-block;       
+  width: 100%;                 
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.option label:hover {
+  background-color: #e0e0e0;
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkbox:checked + span {
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
+  background-color: #878787; 
+  color: #fff;
+  border-radius: 6px;
+}
+
+.nextQuestion {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
 }
